# viron

./: Cargo.toml  LICENSE  README.md  config.toml  config.v2.toml
src/: action.rs  buffer.rs  config.rs  constants.rs  editor.rs  highlighter.rs  logger.rs  main.rs
src/actions/: command_parser.rs  context.rs  mod.rs
src/actions/core/: action.rs  definition.rs  executable.rs  mod.rs  traits.rs
src/actions/types/: buffer.rs  command.rs  composite.rs  editing.rs  lsp.rs  mod.rs  mode.rs  movement.rs  search.rs  system.rs
src/buffer/: gap_buffer.rs  mod.rs
src/config/: editor.rs  mod.rs
src/core/: buffer_manager.rs  cursor.rs  document.rs  message.rs  mod.rs  mode.rs  operation.rs  syntax.rs  utf8.rs  viewport.rs
src/core/buffer/: gap_buffer.rs  mod.rs
src/core/command/: mod.rs
src/core/history/: change.rs  edit.rs  mod.rs
src/core/register/: internal.rs  manager.rs  mod.rs  name.rs
src/core/syntax/: mod.rs
src/editor/: builder.rs  command.rs  command_center.rs  core.rs  implementation.rs  input.rs  mod.rs  render_buffer.rs  search.rs  terminal.rs  ui.rs
src/input/: combo.rs  events.rs  keymaps.rs  keys.rs  mod.rs
src/input/actions/: buffer.rs  combo.rs  command.rs  composite.rs  definition.rs  editing.rs  lsp.rs  mod.rs  mode.rs  movement.rs  search.rs  system.rs
src/input/keys/: encode.rs  mod.rs  (+2 more)
src/lsp/: mod.rs  types.rs
src/service/: mod.rs
src/theme/: mod.rs  vscode.rs
src/ui/: compositor.rs  context.rs  mod.rs  render_buffer.rs
src/v1/: config.rs  editor.rs  highlighter.rs  mod.rs
src/v2/: config.toml  editor.rs  main.rs
(+90 files in other folders)
