[package]
name = "viron"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
better-panic = "0.3.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
env_logger = "0.11.8"
futures = "0.3.31"
futures-timer = "3.0.3"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tree-sitter = "0.25.6"
tree-sitter-rust = "0.24.0"
log = "0.4.27"
async-trait = "0.1.88"
